changing margin top for app to fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   min-height: auto;
   display: flex;
   justify-content: center;
+  margin-top: 3em;
   /* min-height: 100vh; */
 }
 
